--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container">
         <header>
             <h1>AI Study Buddy</h1>
-            <p class="subtitle">Transform your study notes into interactive flashcards using AI - Full Stack Demo</p>
+            <p class="subtitle">Transform your study notes into interactive flashcards using AI</p>
         </header>
         
         
@@ -53,3 +53,4 @@
 </body>
 
 </html>
+
